[gd_scene load_steps=6 format=3 uid="uid://cw11v8vhxyi7x"]

[ext_resource type="Script" uid="uid://dsh6153yw8ybc" path="res://scripts/locked_room.gd" id="1_2fd24"]
[ext_resource type="Texture2D" uid="uid://dmsa06qbbt72k" path="res://assets/buttons/lock.png" id="2_4n5c1"]

[sub_resource type="Gradient" id="Gradient_138vd"]
colors = PackedColorArray(0, 0, 0, 0.63529414, 0, 0, 0, 0.63529414)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rr7oe"]
gradient = SubResource("Gradient_138vd")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yyr41"]

[node name="LockedRoom" type="Node2D"]
script = ExtResource("1_2fd24")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2, 2)
scale = Vector2(1, 267.5)
texture = SubResource("GradientTexture1D_rr7oe")

[node name="Button" type="Button" parent="."]
offset_left = -49.0
offset_top = -49.0
offset_right = -25.0
offset_bottom = -25.0
scale = Vector2(4, 4)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_yyr41")
icon = ExtResource("2_4n5c1")
flat = true

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
